Work on Document API: Sections for XHTML 1.0 output.

--- a/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/default.css
+++ b/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/default.css
@@ -43,6 +43,10 @@ div.sectionHead {
 div.sectionBody {
 }
 
+div.h7 {
+  margin-top    : 0.5em;  
+}
+
 span.captionTitle {
   font-weight   : bold;
 }
