Document API: FigureSeries for XHTML 1.0.

--- a/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/default.css
+++ b/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/default.css
@@ -99,6 +99,7 @@ tr.subfigureBody {
 tr.subfigureCaption {
   margin-top      : 0.2cm;
   margin-bottom   : 0.4cm;
+  vertical-align  : top;
 }
 
 td.subfigureCaption {
