--- a/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/print.css
+++ b/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/print.css
@@ -74,7 +74,7 @@ tr.figureCaption {
 }
 
 td.figureCaption {
-  text-align      : center;
+  text-align      : left;
 }
 
 td.figureBody {
@@ -103,7 +103,7 @@ tr.subfigureCaption {
 }
 
 td.subfigureCaption {
-  text-align      : center;
+  text-align      : left;
 }
 
 td.subfigureBody {
