Document API: Fix in the example, improved code output.

--- a/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/default.css
+++ b/src/main/resources/org/optimizationBenchmarking/utils/document/impl/xhtml10/default.css
@@ -112,6 +112,9 @@ td.codeCaption {
 td.codeBody {
   vertical-align  : middle;
   text-align      : left;
+  background-color: #DCDCFF;
+  padding-left    : 1em;
+  padding-right   : 1em;
 }
 
 table.subfigure {  
