First Version of the Website with Maven Repo
This is the first version of our website which also includes a Maven
repository for providing the downloads. The available download is our
first alpha release, version 0.8.0.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,9 @@
         </section>
 
         <aside id="sidebar">
+          <a href="<li><a href="{{ site.url }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html" class="button">
+            Current Release
+          </a>
           <a href="https://github.com/optimizationBenchmarking/optimizationBenchmarking/archive/master.zip" class="button">
             <small>Download</small>
             .zip file
