--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         </section>
 
         <aside id="sidebar">
-          <a href="<li><a href="{{ site.url }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html" class="button">
+          <a href="<li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html" class="button">
             Current Release
           </a>
           <a href="https://github.com/optimizationBenchmarking/optimizationBenchmarking/archive/master.zip" class="button">
