--- a/_layouts/repo.html
+++ b/_layouts/repo.html
@@ -4,6 +4,6 @@ layout: default
 <div id="home">
 {{ content }}
 <p>
-<a href="{{ site.baseurl }}/">back to index</a> &circ; <a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking">project versions</a>
+<a href="{{ site.baseurl }}/">back to index</a> &bull; <a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking">project versions</a>
 </p>
 </div>
