--- a/_layouts/outerRepo.html
+++ b/_layouts/outerRepo.html
@@ -5,7 +5,7 @@ layout: repo
 
 <h1>Versions</h1>
 
-<p>The <em>optimizationBenchmarking.org</p> repository hosts the following versions of our software:</p> 
+<p>The <em>optimizationBenchmarking.org</em> repository hosts the following versions of our software:</p> 
 
 <ul>
  <li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html">Version 0.8.0 (First Alpha Version)</a></li>
