Another Minor Change
...see title.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,11 @@
         Current Release
       </a>
       <a href="https://github.com/optimizationBenchmarking/optimizationBenchmarking/archive/master.zip" class="button">
-        <small>Download</small>
+        <small>Download Sources</small>
         .zip file
       </a>
       <a href="https://github.com/optimizationBenchmarking/optimizationBenchmarking/archive/master.tar.gz" class="button">
-        <small>Download</small>
+        <small>Download Sources</small>
         .tar.gz file
       </a>
 
