--- a/_layouts/outerRepo.html
+++ b/_layouts/outerRepo.html
@@ -8,3 +8,24 @@ layout: repo
 <ul>
  <li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html">Version 0.8.0 (First Alpha Version)</a></li>
 </ul>{{ content }}
+
+
+<p>This is page is part of the <em>optimizationBenchmarking.org</em>
+<a href="http://en.wikipedia.org/wiki/Apache_Maven">Maven</a> repository. If you want to
+use (the latest version of) our software in your in your project, include the following
+information in your <a href="http://en.wikipedia.org/wiki/Project_Object_Model">Maven POM</a>:</p>
+<pre>
+<repositories>
+  <repository>
+    <id>optimizationBenchmarking</id>
+    <url>http://optimizationbenchmarking.github.io/optimizationBenchmarking/repo/</url>
+  </repository>
+</repositories>
+<dependencies>
+  <dependency>
+    <groupId>optimizationBenchmarking.org</groupId>
+    <artifactId>optimizationBenchmarking</artifactId>
+    <version>{{ site.data.currentVersion.currentVersion }}</version>
+  </dependency>
+</dependencies>
+</pre>
