Bugfix to last commit
as the title says

--- a/_layouts/outerRepo.html
+++ b/_layouts/outerRepo.html
@@ -15,17 +15,17 @@ layout: repo
 use (the latest version of) our software in your in your project, include the following
 information in your <a href="http://en.wikipedia.org/wiki/Project_Object_Model">Maven POM</a>:</p>
 <pre>
-<repositories>
-  <repository>
-    <id>optimizationBenchmarking</id>
-    <url>http://optimizationbenchmarking.github.io/optimizationBenchmarking/repo/</url>
-  </repository>
-</repositories>
-<dependencies>
-  <dependency>
-    <groupId>optimizationBenchmarking.org</groupId>
-    <artifactId>optimizationBenchmarking</artifactId>
-    <version>{{ site.data.currentVersion.currentVersion }}</version>
-  </dependency>
-</dependencies>
+&lt;repositories&gt;
+  &lt;repository&gt;
+    &lt;id&gt;optimizationBenchmarking&lt;/id&gt;
+    &lt;url&gt;http://optimizationbenchmarking.github.io/optimizationBenchmarking/repo/&lt;/url&gt;
+  &lt;/repository&gt;
+&lt;/repositories&gt;
+&lt;dependencies&gt;
+  &lt;dependency&gt;
+    &lt;groupId&gt;optimizationBenchmarking.org&lt;/groupId&gt;
+    &lt;artifactId&gt;optimizationBenchmarking&lt;/artifactId&gt;
+    &lt;version&gt;{{ site.data.currentVersion.currentVersion }}&lt;/version&gt;
+  &lt;/dependency&gt;
+&lt;/dependencies&gt;
 </pre>
