Further improvement to website

--- a/_layouts/outerRepo.html
+++ b/_layouts/outerRepo.html
@@ -11,8 +11,7 @@ layout: repo
 
 
 <p>This is page is part of the <em>optimizationBenchmarking.org</em>
-<a href="http://en.wikipedia.org/wiki/Apache_Maven">Maven</a> repository. If you want to
-use (the latest version of) our software in your in your project, include the following
+<a href="http://en.wikipedia.org/wiki/Apache_Maven">Maven</a> repository. If you want to build your own software by using (the latest version of) ours as external dependency, include the following
 information in your <a href="http://en.wikipedia.org/wiki/Project_Object_Model">Maven POM</a>:</p>
 <pre>
 &lt;repositories&gt;
