--- a/_layouts/outerRepo.html
+++ b/_layouts/outerRepo.html
@@ -13,18 +13,4 @@ layout: repo
 <p>This is page is part of the <em>optimizationBenchmarking.org</em>
 <a href="http://en.wikipedia.org/wiki/Apache_Maven">Maven</a> repository. If you want to build your own software by using (the latest version of) ours as external dependency, include the following
 information in your <a href="http://en.wikipedia.org/wiki/Project_Object_Model">Maven POM</a>:</p>
-<pre>
-&lt;repositories&gt;
-  &lt;repository&gt;
-    &lt;id&gt;optimizationBenchmarking&lt;/id&gt;
-    &lt;url&gt;http://optimizationbenchmarking.github.io/optimizationBenchmarking/repo/&lt;/url&gt;
-  &lt;/repository&gt;
-&lt;/repositories&gt;
-&lt;dependencies&gt;
-  &lt;dependency&gt;
-    &lt;groupId&gt;optimizationBenchmarking.org&lt;/groupId&gt;
-    &lt;artifactId&gt;optimizationBenchmarking&lt;/artifactId&gt;
-    &lt;version&gt;{{ site.data.currentVersion.currentVersion }}&lt;/version&gt;
-  &lt;/dependency&gt;
-&lt;/dependencies&gt;
-</pre>
+{% include mavenPom.md %}
