Fix: Show Correct Link to Current Release
The sidebar on the right side should now always link to the latest
release of our software.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <section id="main-content">{{ content }}</section>
 
     <aside id="sidebar">
-      <a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html" class="button">
+      <a href="{{ site.data.currentVersion.currentVersionRepo }}" class="button">
         Current Release
       </a>
       <a href="https://github.com/optimizationBenchmarking/optimizationBenchmarking/archive/master.zip" class="button">
