Added Versions to Repository Layout

--- a/_layouts/outerRepo.html
+++ b/_layouts/outerRepo.html
@@ -6,6 +6,8 @@ layout: repo
 <p>The <em>optimizationBenchmarking.org</em> repository hosts the following versions of our software:</p> 
 
 <ul>
+<li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.1/index.html">Version 0.8.3 (Fourth Alpha Version)</a></li>
+<li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.1/index.html">Version 0.8.2 (Third  Alpha Version)</a></li>
 <li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.1/index.html">Version 0.8.1 (Second Alpha Version)</a></li>
 <li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html">Version 0.8.0 (First Alpha Version)</a></li> 
 </ul>{{ content }}
