--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <title>{{ page.title }}</title>
 </head><body><header>
 <div class="inner">
-<h1>{{ site.name }}</h1>
+<a href="{{ site.baseurl }}"><h1>{{ site.name }}</h1></a>
 <a href="https://github.com/optimizationBenchmarking/optimizationBenchmarking" class="button"><small>View project on</small> GitHub</a>
 </div></header><div id="content-wrapper">
   <div class="inner clearfix">
