Atom/RSS links at bottom of page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 <a href="https://github.com/optimizationBenchmarking/optimizationBenchmarking" class="button"><small>View project on</small> GitHub</a>
 </div></header><div id="content-wrapper">
   <div class="inner clearfix">
-    <section id="main-content">{{ content }}<p>[<a href="{{ site.baseurl }}">home</a>] &bull; [<a href="{{ site.data.currentVersion.currentVersionRepo }}">downloads</a>] &bull; [<a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking">project versions</a>]</p></section>
+    <section id="main-content">{{ content }}<p>[<a href="{{ site.baseurl }}">home</a>] &bull; [<a href="{{ site.data.currentVersion.currentVersionRepo }}">downloads</a>] &bull; [<a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking">project versions</a>] &bull; [<a href="{{ site.baseurl }}/atom.xml">atom feed</a>] &bull; [<a href="{{ site.baseurl }}/rss.xml">RSS feed</a>]</p></section>
 
     <aside id="sidebar">
       <a href="{{ site.data.currentVersion.currentVersionRepo }}" class="button">
